<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_capturesetting">
    <EditTextPreference
        android:title="@string/pref_sensitivity"
        android:defaultValue="0"
        android:key="pref_sensitivity"
        android:summary="@string/pref_summery_sensitivity"
        />

    <EditTextPreference
        android:title="@string/pref_security"
        android:defaultValue="0"
        android:key="pref_security"
        android:summary="@string/pref_summery_security"
        />
    <EditTextPreference
        android:title="@string/pref_timeout"
        android:defaultValue="0"
        android:key="pref_timeout"
        android:summary="@string/pref_summery_timeout"
        />
    <EditTextPreference
        android:title="@string/pref_hwlfd"
        android:defaultValue="0"
        android:key="pref_hwlfd"
        android:summary="@string/pref_summery_hwlfd"
        />
    <EditTextPreference
        android:title="@string/pref_swlfd"
        android:defaultValue="0"
        android:key="pref_swlfd"
        android:summary="@string/pref_summery_swlfd"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_fastmode"
        android:title="@string/pref_fastmode"
        android:summary="@string/pref_summery_fastmode"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_cropmode"
        android:title="@string/pref_cropmode"
        android:summary="@string/pref_summery_cropmode"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_exttriger"
        android:title="@string/pref_exttriger"
        android:summary="@string/pref_summery_exttriger"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_autosleep"
        android:title="@string/pref_autosleep"
        android:summary="@string/pref_summery_autosleep"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_imageflip180d"
        android:title="@string/pref_imageflip180d"
        android:summary="@string/pref_summery_imageflip180d"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_omniDirVerify"
        android:title="@string/pref_omniDirVerify"
        android:summary="@string/pref_summery_omniDirVerify"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_detectcore"
        android:title="@string/pref_detectcore"
        android:summary="@string/pref_summery_detectcore"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_templatequalityex"
        android:title="@string/pref_templatequalityex"
        android:summary="@string/pref_summery_templatequalityex"
        />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/template_type"
        android:entryValues="@array/template_type_value"
        android:key="pref_exporttemplatetype"
        android:title="@string/pref_exporttemplatetype"
        android:summary="@string/pref_summery_exporttemplatetype"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/prefcategory_getneralsetting">
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_usbNativeUsbMode"
        android:title="@string/pref_useNativeUsbMode"
        android:summary="@string/pref_summery_useNativeUsbMode"
        />
    <Preference
        android:title="@string/pref_license"
        android:key="pref_license"
        />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>